--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -190,6 +190,7 @@
                 }
                 @media (max-width: 768px) {
                     width: 100%;
+                    margin-top: 1rem;
                 }
             }
         }
