--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -3,6 +3,7 @@
         .abonnement-header {
             width: 100%;
             position: relative;
+            margin-bottom: -100px;
             img {
                 max-width: calc(100% + 60px);
                 position: relative;
