--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -4,7 +4,6 @@
     margin: 0 auto;
     .container {
         position: relative;
-        
         .page-home {
             #custom-text {
                 #custom-text-container {
@@ -167,10 +166,9 @@
                                 position: absolute;
                                 bottom: 0;
                                 width: 100%;
-
                                 @media (max-width: 768px) {
-                                   left: -15px;
-                                   width: calc(100% + 40px);
+                                    left: -15px;
+                                    width: calc(100% + 40px);
                                 }
                                 .label-info {
                                     width: 25%;
@@ -192,11 +190,9 @@
                                         margin-bottom: 0;
                                         padding: 12px 0;
                                         height: 60px;
-
                                         @media (max-width: 768px) {
                                             padding: 12px 20px;
-                                         }
-
+                                        }
                                         #group_1 {
                                             display: flex;
                                             justify-content: flex-start;
@@ -235,14 +231,14 @@
                                             align-items: center;
                                             padding: 12px 0;
                                             height: 60px;
+                                            justify-content: space-between;
                                             .input-group {
-                                                width: 25%;
                                                 >input {
                                                     width: 5rem;
+                                                    margin-left: -30px;
                                                 }
                                             }
                                             .product-prices {
-                                                width: 50%;
                                                 text-align: right;
                                                 margin: 0;
                                                 .product-price {
@@ -261,25 +257,20 @@
                                                     display: none;
                                                 }
                                             }
-                                            
                                             @media (max-width: 768px) {
                                                 margin-left: 0;
                                                 padding: 12px 20px;
                                             }
-
                                         }
                                         .add {
                                             flex-direction: row;
                                             justify-content: space-between;
                                             align-items: center;
                                             margin-top: 20px;
-
                                             @media (max-width: 768px) {
                                                 flex-direction: column;
                                                 align-items: left;
                                             }
-
-
                                             .product-nutriscore {
                                                 div {
                                                     img {
@@ -299,16 +290,14 @@
                                                         font-size: 18px;
                                                     }
                                                 }
-
                                                 @media (max-width: 768px) {
                                                     width: 100%;
                                                     margin-top: 10px;
                                                 }
                                             }
-
                                             @media (max-width: 768px) {
-                                                margin-left:20px;
-                                                margin-right:20px;
+                                                margin-left: 20px;
+                                                margin-right: 20px;
                                             }
                                         }
                                     }
@@ -408,6 +397,64 @@
         .products {
             grid-gap: 30px;
             margin-top: 60px;
+            .product-description {
+                position: relative;
+                @media (max-width: 480px) {
+                    position: unset;
+                }
+                .h2 {
+                    width: 75%;
+                    font-size: 1.125rem;
+                    @media (max-width: 480px) {
+                        width: 100%!important;
+                    }
+                }
+                #product-subtitle {
+                    width: 65%;
+                    @media (max-width: 480px) {
+                        width: 100%!important;
+                    }
+                }
+                @media (max-width: 480px) {
+                    height: auto;
+                }
+                .add-to-cart-or-refresh {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    form {
+                        .btn {
+                            border: none;
+                            background: none;
+                            outline: none;
+                        }
+                    }
+                    @media (max-width: 480px) {
+                        bottom: -28px;
+                        top: unset;
+                    }
+                }
+                @media (max-width: 768px) {
+                    border-left: 1px solid $black;
+                    padding-left: 8px;
+                }
+                @media (max-width: 480px) {
+                    padding-bottom: 0!important;
+                }
+            }
+            .product-price-and-shipping {
+                position: absolute;
+                right: 0;
+                .price {
+                    font-family: $roboto;
+                    font-size: 14px;
+                }
+                @media (max-width: 480px) {
+                    top: unset;
+                    left: 10px;
+                    ;
+                }
+            }
         }
     }
 }
@@ -436,13 +483,11 @@
     padding-left: 0;
     margin-right: 0;
     margin: 0 auto;
-    
     .info-detailed {
         width: 100%;
         padding-left: 0;
         padding-right: 0;
         margin-bottom: 30px;
-
         #main-menu {
             ul {
                 display: flex;
@@ -453,7 +498,6 @@
                 border-top: 1px solid $grey_border;
                 margin-bottom: 0;
                 height: 60px;
-
                 .menu-tab {
                     font-size: 14px;
                     text-transform: uppercase;
@@ -462,26 +506,22 @@
                     display: flex;
                     align-items: center;
                     height: 100%;
-
                     &.active {
                         border-bottom: 2px solid $greylight;
-
                         a {
                             color: $greylight;
                             text-decoration: none;
                             padding-right: 15px;
                             padding-left: 15px;
-                            margin:auto;
+                            margin: auto;
                         }
                     }
                 }
-
                 @media (max-width: 768px) {
                     padding-left: 20px;
                     padding-right: 20px;
                 }
-
-                li { 
+                li {
                     &:nth-child(2) {
                         width: 100px;
                         text-align: center;
@@ -505,11 +545,9 @@
             &::-webkit-scrollbar-thumb:hover {
                 background: #555;
             }
-
             @media (max-width: 768px) {
                 height: 100%;
             }
-            
             &.active {
                 display: block;
                 margin-top: 15px;
@@ -522,12 +560,10 @@
             }
             #ingredient {
                 margin-bottom: 50px;
-
                 @media (max-width: 768px) {
                     padding-left: 20px;
                     padding-right: 20px;
-                 }
-
+                }
                 p {
                     font-size: 14px;
                     font-family: $alegreya;
@@ -550,18 +586,15 @@
                     padding-left: 20px;
                     padding-right: 20px;
                 }
-
                 .info-nutrition {
                     .list-nutrition {
                         display: flex;
                         flex-wrap: wrap;
                         margin-top: 35px;
-
                         .nutrition {
                             flex: 1 0 21%;
                             margin-bottom: 1rem;
                             color: green;
-
                             .number {
                                 border: 1px solid #000;
                                 padding: 10px;
@@ -571,7 +604,6 @@
                                 height: 70px;
                                 line-height: 50px;
                                 margin: 0 auto;
-
                                 @media (max-width: 768px) {
                                     border: 1px solid green;
                                 }
@@ -595,7 +627,6 @@
                     }
                 }
             }
-
             #history {
                 @media (max-width: 768px) {
                     padding-left: 20px;
@@ -603,7 +634,6 @@
                 }
             }
         }
-        
         #avis_truspilot {
             margin-top: 50px;
             #trustbox-widget {
@@ -612,7 +642,6 @@
                     width: 100%;
                 }
             }
-
             @media (max-width: 768px) {
                 overflow: hidden;
             }
@@ -700,23 +729,21 @@
         font-size: 13px;
         line-height: 17px;
     }
-
     .bocaux {
         .flex {
             .text-info {
                 @media (max-width: 769px) {
                     bottom: -25px;
-                    right:-100px ;
+                    right: -100px;
                 }
             }
         }
     }
-
     .origin {
         .flex {
             .text-info {
                 @media (max-width: 769px) {
-                    right:-100px ;
+                    right: -100px;
                 }
             }
         }
