"mobile card prodbleme"

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -242,7 +242,7 @@
                     position: relative;
                     #_mobile_cart {
                         position: relative;
-                        right: 10px;
+                        right: 0;
                         top: 0;
                     }
                     #_mobile_user_info {
