--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -390,9 +390,13 @@
             }
         }
     }
-    .product-accessories {
+    .product-accessories,
+    .featured-products {
         width: 1190px;
         margin: 120px auto;
+        padding-left: 15px;
+        padding-right: 15px;
+
         .h5 {
             margin-bottom: 20px;
             span {
@@ -408,6 +412,53 @@
         .products {
             grid-gap: 30px;
             margin-top: 60px;
+
+            > div {
+                article {
+                    .product-description {
+                        position: relative;
+
+                        h2 {
+                            width: 75%;
+                            font-family: $unna;
+
+                            @media (max-width: 480px) {
+                                width: 100%
+                            
+                            }
+                        }
+
+                        .add-to-cart-or-refresh {
+                            position: absolute;
+                            top: 0;
+                            right: 0;
+                            .add-to-cart {
+                                @include icon-panier;
+                            }
+
+                            @media (max-width: 480px) {
+                                bottom: -50px;
+                                top: unset;
+                            }
+                        }
+                    }
+                }
+            }
+
+            @media (max-width: 768px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            @media (max-width: 480px) {
+                display: grid;
+                grid-template-columns: repeat(1, 1fr);
+                height: 100%;
+            
+            }
+        }
+
+        @media (max-width: 768px) {
+            max-width: 100%;
         }
     }
 }
