"product page mobile"

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -163,6 +163,9 @@
                     }
                     &:nth-child(3) {
                         height: 846.172px;
+                        @media screen and (max-width: 767px) {
+                            height: 100%;
+                        }
                         position: relative;
                         .title_product {
                             h2 {
@@ -194,8 +197,9 @@
                                 bottom: 0;
                                 width: 100%;
                                 @media (max-width: 768px) {
-                                    left: -15px;
-                                    width: calc(100% + 40px);
+                                    position: relative;
+                                    width: calc(100% + 60px);
+                                    margin-left: -30px;
                                 }
                                 .label-info {
                                     width: 25%;
@@ -258,16 +262,19 @@
                                             align-items: center;
                                             padding: 12px 0;
                                             height: 60px;
-                                            justify-content: space-between;
                                             .input-group {
+                                                .bootstrap-touchspin {
+                                                    width: 35%;
+                                                }
                                                 >input {
                                                     width: 5rem;
-                                                    margin-left: -30px;
                                                 }
                                             }
                                             .product-prices {
                                                 text-align: right;
                                                 margin: 0;
+                                                position: absolute;
+                                                right: 10px;
                                                 .product-price {
                                                     margin: 0;
                                                     .current-price {
@@ -412,7 +419,6 @@
         margin: 120px auto;
         padding-left: 15px;
         padding-right: 15px;
-
         .h5 {
             margin-bottom: 20px;
             span {
