--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -10503,6 +10503,12 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
     margin-right: .4rem
 }
 
+@media (max-width: 769px) {
+    .product-quantity .qty {
+        margin-right: unset;
+    }
+}
+
 .product-quantity #quantity_wanted {
     color: #232323;
     background-color: #fff;
