--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -413,8 +413,7 @@
             }
         }
     }
-    .product-accessories,
-    .featured-products {
+    .product-accessories {
         width: 1190px;
         margin: 120px auto;
         padding-left: 15px;
