--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -119,6 +119,7 @@
                                 }
                                 .product-price-and-shipping {
                                     position: absolute;
+                                    top: calc(100% + 10px);
                                     right: 0;
                                     .price {
                                         font-family: $roboto;
