--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -20,6 +20,14 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
     }
 }
 
+.menu-item.current {
+    border-bottom: 1px solid #000;
+}
+
+.menu-item.current:first-child {
+    padding-bottom: 6px;
+}
+
 .top-menu .sub-menu.collapse {
     justify-content: space-between;
     padding: 0 30px;
