--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -43,8 +43,8 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         @media (max-width: 769px) {
             position: absolute;
             top: -45px;
-            left: calc(50% - 25px);
             font-size: 20px;
+            text-align: center;
         }
     }
     .menu-block {
@@ -53,6 +53,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         }
         .menulink {
             cursor: pointer;
+            font-style: normal;
         }
         margin: 30px 20px;
         flex: 1 1 auto;
