--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -60,7 +60,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                     padding: 0;
                     padding-bottom: 17px;
                     font-style: normal;
-                    font-family: $alegreya;
+                    font-family: $unna;
                     font-size: 16px;
                 }
             }
@@ -93,7 +93,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             i {
                 a {
                     font-style: normal;
-                    font-family: $alegreya;
+                    font-family: $unna;
                     font-size: 15px;
                     color: $black;
                     letter-spacing: 0.5px;
@@ -138,7 +138,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         i {
                             a {
                                 font-style: normal;
-                                font-family: $alegreya;
+                                font-family: $unna;
                                 font-size: 16px;
                                 color: $black;
                                 letter-spacing: 0.5px;
@@ -152,8 +152,8 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         }
                         span {
                             font-style: normal;
-                            font-family: $alegreya;
-                            font-size: 14px;
+                            font-family: $unna;
+                            font-size: 16px;
                             color: $black;
                             letter-spacing: 0.5px;
                         }
