le truc de ses morts la

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -214,6 +214,10 @@
                                         font-size: 12px;
                                         font-weight: 700;
                                     }
+
+                                    @media (max-width: 480px) {
+                                        width: 30%;
+                                    }
                                 }
                                 .product-variants {
                                     .product-variants-item {
@@ -286,6 +290,10 @@
                                                             font-family: 'RobotoMono';
                                                             font-weight: 700;
                                                             letter-spacing: 1px;
+
+                                                            @media (max-width: 480px) {
+                                                                font-size: 20px;
+                                                            }
                                                         }
                                                     }
                                                 }
@@ -646,6 +654,11 @@
                                     border: 1px solid green;
                                 }
                             }
+
+                            @media (max-width: 480px) {
+                                flex: 0 0 33.333333%;
+                            }
+
                             .label-nutrition {
                                 text-align: center;
                                 margin-top: 10px;
@@ -690,6 +703,9 @@
 .actu {
     margin-top: 80px;
     .info-actu {
+        @media screen and (max-width: 480px) {
+            height: 500px;
+        }
         h2 {
             margin-bottom: 80px;
             font-family: $roboto;
@@ -726,6 +742,10 @@
                     width: 600px;
                     height: auto;
                 }
+
+                @media screen and (max-width: 480px) {
+                    width: 100%;
+                }
             }
             .secret_cuisine {
                 // width: 694px;
@@ -744,6 +764,10 @@
                     width: 600px;
                     height: auto;
                 }
+
+                @media screen and (max-width: 480px) {
+                    width: 100%;
+                }
             }
             .recyclage {
                 // width: 694px;
@@ -761,6 +785,10 @@
                     width: 600px;
                     height: auto;
                 }
+
+                @media screen and (max-width: 480px) {
+                       width: 100%;
+                }
             }
             .text-info {
                 background-color: $pink;
@@ -770,10 +798,21 @@
                 right: -100px;
                 width: 500px;
                 z-index: 99;
+                color: $black;
+                font-family: $roboto-light;
+                font-size: 13px;
+                line-height: 17px;
+
                 @media (max-width: 769px) {
                     right: 13px;
                     bottom: 65px;
                     top: auto;
+                }
+
+                @media (max-width: 480px) {
+                    bottom: 250px;
+                    right: -17px;
+                    width: 100%;
                 }
                 p {
                     font-size: 21px;
