--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -510,7 +510,8 @@
         background: #000;
         border: 1px solid #232323;
         word-spacing: 6px;
-        padding: .7rem 1.25rem font-family: RobotoMono;
+        padding: .7rem 1.25rem;
+        font-family: RobotoMono;
         letter-spacing: 1px;
         font-size: 11px;
         a {
