--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -514,6 +514,7 @@
         font-family: RobotoMono;
         letter-spacing: 1px;
         font-size: 11px;
+        font-weight: 600;
         a {
             text-transform: uppercase;
             color: $white;
