menu mobile version

--- a/assets/scss/shop.scss
+++ b/assets/scss/shop.scss
@@ -32,6 +32,7 @@
                             }
                         }
                         .price {
+                            padding-left: 25px;
                             span {
                                 position: absolute;
                                 bottom: 0;
