--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -340,7 +340,7 @@
                                 border-bottom: none;
                             }
                             @media (max-width: 769px) {
-                                padding: 30px 0px;
+                                padding: 20px 0px 30px;
                             }
                             li {
                                 position: relative;
