--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -63,7 +63,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             padding: 0 30px;
             margin: 0;
         }
-        .menu-block-link {
+        .menu-block-link {            
             i {
                 a {
                     padding: 0;
@@ -85,6 +85,10 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         }
         i {
             display: block;
+
+            @media (max-width: 767px) {
+                margin-bottom: 10px;
+            }
         }
         &:nth-child(2) {
             flex: 0 1 auto;
@@ -95,7 +99,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             border-top: 1px solid $black;
             @media (max-width: 769px) {
                 margin: 0;
-                padding: 0;
+                padding: 20px 0 30px; 
             }
         }
         &:first-child {
@@ -227,7 +231,20 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         ul {
                             @media (max-width: 769px) {
                                 column-count: 2;
-                                column-gap: 20px;
+                                column-gap: 80px;
+                                column-rule: 1px solid gray;
+
+                            }
+
+                            i {
+                                @media (max-width: 769px) {
+                                    &:nth-child(4),
+                                    &:nth-child(8),
+                                    &:nth-child(13),
+                                    &:nth-child(16) {
+                                        margin-bottom: 40px;
+                                    }
+                                }
                             }
                         }
                     }
