--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -156,6 +156,16 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                                 color: $black;
                                 letter-spacing: 0.5px;
                             }
+
+                            @media (max-width: 768px) {
+                                &:nth-child(2),
+                                &:nth-child(4),
+                                &:nth-child(7),
+                                &:nth-child(8) {
+                                    margin-bottom: 40px;
+                                }
+
+                            }
                         }
                     }
                     .menu-block-child-link {
