--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -36,6 +36,7 @@
             .bloc-title {
                 font-family: 'RobotoMono';
                 font-size: 18px;
+                text-transform: uppercase;
             }
             width: 100%;
             &:nth-child(2n+1) {
