caroussel img home page css

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -8,6 +8,10 @@
             #carousel {
                 ul {
                     height: auto;
+                    @media (max-width: 480px) {
+                        width: calc(100% + 30px);
+                        margin-left: -15px;
+                    }
                     li {
                         a {
                             figure {
@@ -21,8 +25,7 @@
                                         height: auto;
                                     }
                                     @media (max-width: 480px) {
-                                        max-width: 450px;
-                                        max-height: 191.484px;
+                                        max-width: unset;
                                     }
                                 }
                             }
@@ -212,7 +215,8 @@
     }
 }
 
-.page-home, .page-cms {
+.page-home,
+.page-cms {
     .home-page-block {
         margin-top: 100px;
         h2 {
@@ -227,12 +231,11 @@
         .custom-text {
             #custom-text-container {
                 padding: 40px 20px;
-                > p {
+                >p {
                     max-width: 722px;
                     margin: 0 auto;
                     margin-bottom: 24px;
                 }
-
                 .little-size {
                     font-size: $alegreya;
                     font-size: 16px;
