--- a/assets/scss/log.scss
+++ b/assets/scss/log.scss
@@ -10,10 +10,8 @@
         form {
             section {
                 position: relative;
-
                 .form-group:nth-child(3) {
                     margin-bottom: 0;
-
                     button {
                         width: 100%;
                         height: 38px !important;
@@ -34,15 +32,12 @@
             }
         }
     }
-
     form {
         section {
             .form-group:first-child {
                 .form-control-valign {
                     .radio-inline {
                         margin-right: 20px;
-
-
                         span {
                             margin-right: 3px;
                         }
@@ -61,7 +56,6 @@
             }
         }
     }
-
     #checkout-personal-information-step {
         p:nth-child(2) {
             a {
@@ -113,9 +107,10 @@
 /*Information*/
 
 .my-account {
-    img {
+    img.category-cover {
         max-width: 1160px!important;
         max-height: 369.03px!important;
+        width: 100%;
     }
 }
 
