--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -95,6 +95,12 @@
                 .card {
                     padding: 30px;
                     background: #fff;
+                    width: 47%;
+
+                    @media (max-width: 768px) {
+                        width: 100%;
+                    }
+
                     .abonnement-title {
                         border-left: 1px solid;
                         padding-left: 10px;
