--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -191,6 +191,11 @@
                                     text-transform: none;
                                     letter-spacing: 0px;
                                     line-height: 23px;
+
+                                    a {
+                                        padding-left: 0;
+                                        padding-right: 0;
+                                    }
                                 }
                                 &:first-child {
                                     .menu-item-title {
