--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -234,7 +234,7 @@
                 }
 
                 .little-size {
-                    font-size: $alegreya;
+                    font-family: $alegreya;
                     font-size: 16px;
                 }
             }
