--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -99,7 +99,17 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             border-top: 1px solid $black;
             @media (max-width: 769px) {
                 margin: 0;
-                padding: 20px 0 30px; 
+                padding: 20px 0 40px; 
+            }
+
+            .menu-block-child {
+                .menu-block-child-name {
+                    br {
+                        @media (max-width: 769px) {
+                            display: none;
+                        }
+                    }
+                }
             }
         }
         &:first-child {
@@ -179,6 +189,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         margin-bottom: 30px;
                         color: $black;
                         line-height: 22px;
+                        
                     }
                     
                     .menu-block-child-link {
