--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -71,6 +71,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                     font-style: normal;
                     font-family: $unna;
                     font-size: 16px;
+                    line-height: 18px;
                 }
             }
         }
@@ -259,6 +260,12 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             }
         }
         &:nth-child(4) {
+            max-width: 236px; 
+
+            @media (max-width: 769px) {
+                max-width: 100%;
+
+            }
             .recipe-ingredient {
                 .menu-block-child {
                     &:first-child {
