--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -47,6 +47,7 @@
                         align-items: flex-start;
                         -ms-flex-pack: end;
                         justify-content: space-between;
+                        height: 110px;
                     }
                     margin-top: 20px;
                     h3 {
